[package]
edition = "2021"
name = "bitswap-test"
version = "0.1.0"

[dependencies]
libp2p-bitswap = "0.22.0"
ipld_blockstore = "0.1.1"
db = { package = "forest_db", version = "0.1" }

[dependencies.async-trait]
version = "0.1.52"

[dependencies.fnv]
version = "1.0.7"

[dependencies.futures]
version = "0.3.19"

[dependencies.lazy_static]
version = "1.4.0"

[dependencies.libipld]
version = "0.12.0"
default-features = false

[dependencies.libp2p]
version = "0.43.0"
features = ["request-response"]
default-features = false

[dependencies.prometheus]
version = "0.13.0"

[dependencies.prost]
version = "0.9.0"
optional = true

[dependencies.thiserror]
version = "1.0.30"

[dependencies.tracing]
version = "0.1.29"

[dependencies.unsigned-varint]
version = "0.7.1"
features = ["futures", "std"]
[dev-dependencies.async-std]
version = "1.10.0"
features = ["attributes"]

[dev-dependencies.env_logger]
version = "0.9.0"

[dev-dependencies.libipld]
version = "0.12.0"
features = ["dag-cbor"]
default-features = false

[dev-dependencies.libp2p]
version = "0.43.0"

[dev-dependencies.multihash]
version = "0.14.0"
features = ["blake3"]
default-features = false

[dev-dependencies.tracing-subscriber]
version = "0.3.5"
features = ["env-filter"]
[build-dependencies.prost-build]
version = "0.9.0"
optional = true

[dependencies.cid]
version = "0.3"
features = ["cbor"]
package = "forest_cid"

[features]
default = ["rocksdb"]
compat  = ["prost", "prost-build"]
rocksdb = ["db/rocksdb", "ipld_blockstore/rocksdb"]